welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var biscuit:Int
    ^Poucet:1: error: local variables must be initialized
var biscuit:Int
    ^Poucet:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var count:Int
    ^Poucet:2: error: local variables must be initialized
var count:Int
    ^Poucet:3: error: not found: value estSurBlanc
while (estSurBlanc()){
       ^